--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="John Doe profile picture" />
+        <img src="./assets/profile-pics.jpg" alt="photo  de mon visage" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Bonjour je suis</p>
@@ -59,13 +59,13 @@
         <div id="socials-container">
           <img
             src="./assets/linkedin.png"
-            alt="My LinkedIn profile"
+            alt="Mon linkedin"
             class="icon"
             onclick="location.href='https://linkedin.com/in/julien-castro/'"
           />
           <img
             src="./assets/github.png"
-            alt="My Github profile"
+            alt="Mon Github"
             class="icon"
             onclick="location.href='https://github.com/Niwa-Yume'"
           />
@@ -78,7 +78,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="./assets/profile-pic.jpg"
             alt="Profile picture"
             class="about-pic"
           />
@@ -115,7 +115,7 @@
       </div>
       <img
         src="./assets/arrow.png"
-        alt="Arrow icon"
+        alt="image de flèche"
         class="icon arrow"
         onclick="location.href='./#experience'"
       />
@@ -126,7 +126,7 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">Compétences Informatique</h2>
             <div class="article-container">
               <article>
                 <img
@@ -136,7 +136,7 @@
                 />
                 <div>
                   <h3>HTML</h3>
-                  <p>Experienced</p>
+                  <p>Experimenté</p>
                 </div>
               </article>
               <article>
@@ -147,18 +147,7 @@
                 />
                 <div>
                   <h3>CSS</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>SASS</h3>
-                  <p>Intermediate</p>
+                  <p>Experimenté</p>
                 </div>
               </article>
               <article>
@@ -169,7 +158,7 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Basic</p>
+                  <p>intérmediaire</p>
                 </div>
               </article>
               <article>
@@ -179,8 +168,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>TypeScript</h3>
-                  <p>Basic</p>
+                  <h3>Python</h3>
+                  <p>Intermédiaire</p>
                 </div>
               </article>
               <article>
@@ -190,24 +179,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Material UI</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-            </div>
-          </div>
-          <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
-            <div class="article-container">
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>PostgreSQL</h3>
-                  <p>Basic</p>
+                  <h3>Flutter</h3>
+                  <p>basique</p>
                 </div>
               </article>
               <article>
@@ -217,19 +190,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Node JS</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Express JS</h3>
-                  <p>Intermediate</p>
+                  <h3>Active directory</h3>
+                  <p>basique</p>
                 </div>
               </article>
               <article>
@@ -241,6 +203,77 @@
                 <div>
                   <h3>Git</h3>
                   <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Docker</h3>
+                  <p>Basique</p>
+                </div>
+              </article>
+            </div>
+          </div>
+          <div class="details-container">
+            <h2 class="experience-sub-title">Autre compétences</h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Méthode agiles</h3>
+                  <p>Intermédiaire</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Office 365</h3>
+                  <p>Experimenté</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Communication digital</h3>
+                  <p>Intermédiaire</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>SEO</h3>
+                  <p>Intermédiaire</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Canva</h3>
+                  <p>Experimenté</p>
                 </div>
               </article>
             </div>
