--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div>
         <ul class="nav-links">
           <li><a href="#about">A propos</a></li>
-          <li><a href="#experience">Expériences</a></li>
+          <li><a href="#experience">Mes compétences</a></li>
           <li><a href="#projects">Projets</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -31,7 +31,7 @@
         </div>
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">A propos</a></li>
-          <li><a href="#experience" onclick="toggleMenu()">Expériences</a></li>
+          <li><a href="#experience" onclick="toggleMenu()">Mes compétences</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projets</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
@@ -400,7 +400,7 @@
         <div class="nav-links-container">
           <ul class="nav-links">
             <li><a href="#about">A propos</a></li>
-            <li><a href="#experience">Expériences</a></li>
+            <li><a href="#experience">Mes compétences</a></li>
             <li><a href="#projects">Projets</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
