--- a/index.html
+++ b/index.html
@@ -364,6 +364,30 @@
               </button>
             </div>
           </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/le goblins.png"
+                alt="Project 2"
+                class="project-img"
+              />
+            </div>
+          <h2 class="experience-sub-title project-title">Site du Goblins</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/Niwa-Yume/Site_responsive_goblin'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://niwa-yume.github.io/Site_responsive_goblin/'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
         </div>
       </div>
       <img
