--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="logo">Julien Castro</div>
       <div>
         <ul class="nav-links">
-          <li><a href="#about">A propos</a></li>
+          <li><a href="#about">À propos</a></li>
           <li><a href="#experience">Mes compétences</a></li>
           <li><a href="#projects">Projets</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -30,7 +30,7 @@
           <span></span>
         </div>
         <div class="menu-links">
-          <li><a href="#about" onclick="toggleMenu()">A propos</a></li>
+          <li><a href="#about" onclick="toggleMenu()">À propos</a></li>
           <li><a href="#experience" onclick="toggleMenu()">Mes compétences</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projets</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
@@ -424,7 +424,7 @@
       <nav>
         <div class="nav-links-container">
           <ul class="nav-links">
-            <li><a href="#about">A propos</a></li>
+            <li><a href="#about">À propos</a></li>
             <li><a href="#experience">Mes compétences</a></li>
             <li><a href="#projects">Projets</a></li>
             <li><a href="#contact">Contact</a></li>
