--- a/index.html
+++ b/index.html
@@ -179,28 +179,6 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Flutter</h3>
-                  <p>basique</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Active directory</h3>
-                  <p>basique</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
                   <h3>Git</h3>
                   <p>Intermediate</p>
                 </div>
@@ -228,7 +206,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Méthode agiles</h3>
+                  <h4>Méthode Agiles</h4>
                   <p>Intermédiaire</p>
                 </div>
               </article>
@@ -250,7 +228,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Communication digital</h3>
+                  <h4>Communication digital</h4>
                   <p>Intermédiaire</p>
                 </div>
               </article>
