test nouvelle pp

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/IMG_1352-removebg-preview.png" alt="photo  de mon visage" />
+        <img src="./assets/test.jpeg" alt="photo  de mon visage" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Bonjour je suis</p>
