--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/IMG_1352-removebg-preview.png" alt="photo  de mon visage" />
+        <img src="./assets/Julien_CASTRO-removebg-preview.png" alt="photo  de mon visage" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Bonjour je suis</p>
@@ -78,7 +78,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/profile-pic.jpg"
+            src="./assets/profile-pic-removebg-preview.png"
             alt="Profile picture"
             class="about-pic"
           />
