Correc image + projet
Correction des sections pour  les projets et ajout de ma pp sur l'entête principale

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         </div>
       </div>
     </nav>
+
+    <!--Mon profil principal -->
+
     <section id="profile">
       <div class="section__pic-container">
         <img src="./assets/Julien_CASTRO-removebg-preview.png" alt="photo  de mon visage" />
@@ -72,6 +75,9 @@
         </div>
       </div>
     </section>
+
+    <!--MON PROFIL AVEC MES COMPTETENCE -->
+
     <section id="about">
       <p class="section__text__p1">En savoir plus sur</p>
       <h1 class="title">Moi</h1>
@@ -265,6 +271,11 @@
         onclick="location.href='./#projects'"
       />
     </section>
+
+
+    <!--Mon PROFIL AVEC MES PROJETS ARTIE 1 -->
+
+
     <section id="projects">
       <p class="section__text__p1">Je vous présente</p>
       <h1 class="title">Mes projets</h1>
@@ -310,12 +321,6 @@
               >
                 Github
               </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Niwa-Yume/script_web_scrapping'"
-              >
-                Live Demo
-              </button>
             </div>
           </div>
           <div class="details-container color-container">
@@ -334,24 +339,29 @@
               >
                 Github
               </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Niwa-Yume/calculatrice'"
-              >
-                Live Demo
-              </button>
             </div>
           </div>
-          <br>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Mon PROFIL AVEC MES PROJETS PARTIE 2 -->
+
+    <section id="projects">
+      <p class="section__text__p1">Je vous présente</p>
+      <h1 class="title">Mes projets  parti 2</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
           <div class="details-container color-container">
             <div class="article-container">
               <img
                 src="./assets/le goblins.png"
-                alt="Project 2"
+                alt="Project 1"
                 class="project-img"
               />
             </div>
-          <h2 class="experience-sub-title project-title">Site du Goblins</h2>
+            <h2 class="experience-sub-title project-title">Le site du goblin</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -367,15 +377,33 @@
               </button>
             </div>
           </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/image bot python.jpg"
+                alt="Project 2"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Python bot telegram</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/Niwa-Yume/jujujitsu_bot'"
+              >
+                Github
+              </button>
+            </div>
+          </div>
         </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#contact'"
-      />
+      <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'"/>
     </section>
+
+
+    <!-- MOYENS DE CONTACT -->
+
+
     <section id="contact">
       <p class="section__text__p1">Si vous voulez prendre contacte avec moi</p>
       <h1 class="title">Les moyens de me contacter</h1>
