--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     </div>
     <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
   </section>
-  <!--Mon PROFIL AVEC MES PROJETS ARTIE 1 -->
+  <!--Mon PROFIL AVEC MES PROJETS PARTIE 1 -->
   <section id="projects">
     <p class="section__text__p1">Je vous présente</p>
     <h1 class="title">Mes projets</h1>
@@ -240,6 +240,25 @@
             </button>
             <button class="btn btn-color-2 project-btn"
               onclick="location.href='https://niwa-yume.github.io/Site_responsive_goblin/'">
+              Live Demo
+            </button>
+          </div>
+        </div>
+        <!--FIN BLOCK PROJET 2-->
+
+        <!--BLOCK PROJET 3-->
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="./assets/meteo.png" alt="Project 1" class="project-img" />
+          </div>
+          <h2 class="experience-sub-title project-title">App météo avec API</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn"
+              onclick="location.href='https://github.com/Niwa-Yume/premiere-app-meteo'">
+              Github
+            </button>
+            <button class="btn btn-color-2 project-btn"
+              onclick="location.href='https://niwa-yume.github.io/premiere-app-meteo/'">
               Live Demo
             </button>
           </div>
