--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
@@ -51,7 +51,7 @@
       <h1 class="title">Julien Castro</h1>
       <p class="section__text__p2">Développeur</p>
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">
+        <button class="btn btn-color-2" onclick="window.open('./assets/CV FIN JUILLET 2023.pdf')">
           Télécharger CV
         </button>
         <button class="btn btn-color-1" onclick="location.href='./#contact'">
