--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <h1 class="title">Julien Castro</h1>
       <p class="section__text__p2">Développeur</p>
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('./assets/CV FIN JUILLET 2023.pdf')">
+        <button class="btn btn-color-2" onclick="window.open('./assets/CV janvier 2024 formelle.pdf')">
           Télécharger CV
         </button>
         <button class="btn btn-color-1" onclick="location.href='./#contact'">
