--- a/index.html
+++ b/index.html
@@ -115,33 +115,54 @@
     <div class="experience-details-container">
       <div class="about-containers">
         <div class="details-container">
-          <h2 class="experience-sub-title">Compétences Informatique</h2>
+          <h2 class="experience-sub-title">Compétences Informatiques</h2>
           <div class="article-container">
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
-                <h3>HTML</h3>
-                <p>Experimenté</p>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-              <div>
-                <h3>CSS</h3>
-                <p>Experimenté</p>
+                <h3>Python</h3>
+                <p>Avancé</p>
               </div>
             </article>
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
                 <h3>JavaScript</h3>
-                <p>intérmediaire</p>
+                <p>Intermédiaire</p>
               </div>
             </article>
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
-                <h3>Python</h3>
+                <h3>Scrapy</h3>
+                <p>Intermédiaire</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <div>
+                <h3>HTML et CSS</h3>
+                <p>Avancé</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <div>
+                <h3>PHP</h3>
+                <p>Intermédiaire</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <div>
+                <h3>Tailwind CSS</h3>
+                <p>Intermédiaire</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <div>
+                <h3>MySQL</h3>
                 <p>Intermédiaire</p>
               </div>
             </article>
@@ -149,54 +170,82 @@
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
                 <h3>Git</h3>
-                <p>Intermediate</p>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-              <div>
-                <h3>Docker</h3>
-                <p>Basique</p>
+                <p>Avancé</p>
               </div>
             </article>
           </div>
         </div>
         <div class="details-container">
-          <h2 class="experience-sub-title">Autre compétences</h2>
+          <h2 class="experience-sub-title">Toolkit</h2>
           <div class="article-container">
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
-                <h4>Méthode Agiles</h4>
-                <p>Intermédiaire</p>
+                <h4>GitHub</h4>
+
               </div>
             </article>
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
-                <h3>Office 365</h3>
-                <p>Experimenté</p>
+                <h4>GitLab</h4>
+
               </div>
             </article>
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
-                <h4>Communication digital</h4>
-                <p>Intermédiaire</p>
+                <h4>Postman</h4>
+
               </div>
             </article>
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
-                <h3>SEO</h3>
-                <p>Intermédiaire</p>
+                <h4>Figma</h4>
+
               </div>
             </article>
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
-                <h3>Canva</h3>
-                <p>Experimenté</p>
+                <h4>Docker</h4>
+
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <div>
+                <h4>Discord</h4>
+
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <div>
+                <h4>Canva</h4>
+
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <div>
+                <h4>WordPress</h4>
+
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <div>
+                <h4>WebFlow</h4>
+
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <div>
+                <h4>Google Suite</h4>
+
               </div>
             </article>
           </div>
@@ -205,6 +254,7 @@
     </div>
     <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
   </section>
+
   <!--Mon PROFIL AVEC MES PROJETS PARTIE 1 -->
   <section id="projects">
     <p class="section__text__p1">Je vous présente</p>
