mise à jours des projet diplay et contenu partie 1

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+
+
   <!--Header-->
   <nav id="desktop-nav">
     <div class="logo">Julien Castro</div>
@@ -40,6 +42,7 @@
     </div>
   </nav>
 
+
   <!--Mon profil principal -->
 
   <section id="profile">
@@ -66,6 +69,7 @@
       </div>
     </div>
   </section>
+
 
   <!--MON PROFIL AVEC MES COMPTETENCE -->
 
@@ -109,6 +113,11 @@
     </div>
     <img src="./assets/arrow.png" alt="image de flèche" class="icon arrow" onclick="location.href='./#experience'" />
   </section>
+
+
+  <!--SECTION EXPERIENCE-->
+
+
   <section id="experience">
     <p class="section__text__p1">Découvrez</p>
     <h1 class="title">Mes compétences</h1>
@@ -255,18 +264,24 @@
     <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
   </section>
 
-  <!--Mon PROFIL AVEC MES PROJETS PARTIE 1 -->
+  <!-- Mon PROFIL AVEC MES PROJETS PARTIE 2 -->
   <section id="projects">
+    <br>
+    <br>
     <p class="section__text__p1">Je vous présente</p>
     <h1 class="title">Mes projets</h1>
     <div class="experience-details-container">
       <div class="about-containers">
-        <!--BLOCK PROJET 1-->
+        <!-- BLOCK PROJET 1 PAR 2 -->
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/projet-1.png" alt="Project 1" class="project-img" />
+            <img src="/assets/projet-1.png" alt="Projet noctinium" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Noctinium</h2>
+          <p>
+            Projet qui a pour but de référencer les événements nocturnes de la région de Genève.
+          </p>
+          <br>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="location.href='https://github.com/Niwa-Yume/Noctinium'">
@@ -277,84 +292,143 @@
             </button>
           </div>
         </div>
-        <!--BLOCK PROJET 2-->
+        <!-- BLOCK PROJET 2 PAR 2 -->
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/le goblins.png" alt="Project 1" class="project-img" />
+            <img src="/assets/projet-2.png" alt="Projet WordPress 2" class="project-img" />
           </div>
-          <h2 class="experience-sub-title project-title">Le site du goblin</h2>
-          <div class="btn-container">
-            <button class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/Niwa-Yume/Site_responsive_goblin'">
-              Github
-            </button>
-            <button class="btn btn-color-2 project-btn"
-              onclick="location.href='https://niwa-yume.github.io/Site_responsive_goblin/'">
-              Live Demo
-            </button>
-          </div>
-        </div>
-        <!--FIN BLOCK PROJET 2-->
-
-        <!--BLOCK PROJET 3-->
-        <div class="details-container color-container">
-          <div class="article-container">
-            <img src="./assets/meteo.png" alt="Project 1" class="project-img" />
-          </div>
-          <h2 class="experience-sub-title project-title">App météo avec API</h2>
-          <div class="btn-container">
-            <button class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/Niwa-Yume/premiere-app-meteo'">
-              Github
-            </button>
-            <button class="btn btn-color-2 project-btn"
-              onclick="location.href='https://niwa-yume.github.io/premiere-app-meteo/'">
-              Live Demo
-            </button>
-          </div>
-        </div>
-        <!--FIN BLOCK PROJET 2-->
-      </div>
-    </div>
-    </div>
-  </section>
-  <!--Mon PROFIL AVEC MES PROJETS PARTIE 2 -->
-  <section id="projects">
-    <br>
-    <br>
-    <p class="section__text__p1">Je vous présente</p>
-    <h1 class="title">Mes projets parti 2</h1>
-    <div class="experience-details-container">
-      <div class="about-containers">
-        <!--BLOCK PROJET 1 PAR 2-->
-        <div class="details-container color-container">
-          <div class="article-container">
-            <img src="./assets/projet-2.png" alt="Project 2" class="project-img" />
-          </div>
-          <h2 class="experience-sub-title project-title">Python web Scrapping</h2>
+          <h2 class="experience-sub-title project-title">Script de scrapping</h2>
+          <p>
+            Script qui a pour but de récupérer des informations sur un site web, pour les stocker dans un excel traiter la donnée et la stocker dans une base de donnée.
+          </p>
+          <br>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="location.href='https://github.com/Niwa-Yume/script_web_scrapping'">
               Github
             </button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href=''">
+              NO Live Demo
+            </button>
           </div>
         </div>
-        <!--BLOCK PROJET 2 PART 2-->
+        <!-- BLOCK PROJET 3 PAR 2 -->
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/image bot python.jpg" alt="Project 2" class="project-img" />
+            <img src="/assets/image bot python.jpg" alt="Projet WordPress 3" class="project-img" />
           </div>
-          <h2 class="experience-sub-title project-title">Python bot telegram</h2>
+          <h2 class="experience-sub-title project-title">Bot de Crawling Scrapy</h2>
+          <p>
+            Bot qui a pour but de récupérer des informations sur plusieurs site web,les parcourirs et les stocker les données dans un excel traiter la donnée et la stocker dans une base de donnée.
+          </p>
+          <br>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/Niwa-Yume/jujujitsu_bot'">
+              onclick="location.href='https://github.com/Niwa-Yume/Bot-scrapy'">
               Github
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://votresite.com/projet3'">
+              NO Live Demo
+            </button>
+          </div>
+        </div>
+        <!-- BLOCK PROJET 4 PAR 2 -->
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="/assets/meteo.png" alt="Projet WordPress 4" class="project-img" />
+          </div>
+          <h2 class="experience-sub-title project-title">Application météo API</h2>
+          <p>
+            Application qui a pour but de récupérer des informations sur la météo d'une ville, pour les afficher sur une page web.
+          </p>
+          <br>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn"
+              onclick="location.href='https://github.com/Niwa-Yume/premiere-app-meteo'">
+              Github
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://niwa-yume.github.io/premiere-app-meteo/'">
+              Live Demo
             </button>
           </div>
         </div>
       </div>
     </div>
-    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
+    <img src="./assets/arrow.png" alt="Icône flèche" class="icon arrow" onclick="location.href='./#contact'" />
+  </section>
+
+
+  <!-- Mon PROFIL AVEC MES PROJETS PARTIE 2 -->
+  <section id="projects">
+    <br>
+    <br>
+    <p class="section__text__p1">Je vous présente</p>
+    <h1 class="title">Mes projets</h1>
+    <div class="experience-details-container">
+      <div class="about-containers">
+        <!-- BLOCK PROJET 1 PAR 2 -->
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="/assets/projet-1.png" alt="Projet noctinium" class="project-img" />
+          </div>
+          <h2 class="experience-sub-title project-title">Portefolio TailwindCSS</h2>
+          <p>
+            Projet qui a pour but de référencer les événements nocturnes de la région de Genève.
+          </p>
+          <br>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn"
+              onclick="location.href='https://github.com/Niwa-Yume/Noctinium'">
+              Github
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://noctinium.com/'">
+              Live Demo
+            </button>
+          </div>
+        </div>
+        <!-- BLOCK PROJET 2 PAR 2 -->
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="/assets/projet-2.png" alt="Projet WordPress 2" class="project-img" />
+          </div>
+          <h2 class="experience-sub-title project-title">Bot telegram</h2>
+          <p>
+            Script qui a pour but de récupérer des informations sur un site web, pour les stocker dans un excel traiter la donnée et la stocker dans une base de donnée.
+          </p>
+          <br>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn"
+              onclick="location.href='https://github.com/Niwa-Yume/script_web_scrapping'">
+              Github
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href=''">
+              NO Live Demo
+            </button>
+          </div>
+        </div>
+        <!-- BLOCK PROJET 3 PAR 2 -->
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="/assets/image bot python.jpg" alt="Projet WordPress 3" class="project-img" />
+          </div>
+          <h2 class="experience-sub-title project-title">Club des bergers belges</h2>
+          <p>
+            Bot qui a pour but de récupérer des informations sur plusieurs site web,les parcourirs et les stocker les données dans un excel traiter la donnée et la stocker dans une base de donnée.
+          </p>
+          <br>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn"
+              onclick="location.href='https://github.com/Niwa-Yume/Bot-scrapy'">
+              Github
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://votresite.com/projet3'">
+              NO Live Demo
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <img src="./assets/arrow.png" alt="Icône flèche" class="icon arrow" onclick="location.href='./#contact'" />
   </section>
 
 
