--- a/index.html
+++ b/index.html
@@ -369,19 +369,19 @@
         <!-- BLOCK PROJET 1 PAR 2 -->
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="/assets/projet-1.png" alt="Projet noctinium" class="project-img" />
+            <img src="/images/portefolio-tailwindcss.png" alt="Projet noctinium" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Portefolio TailwindCSS</h2>
           <p>
-            Projet qui a pour but de référencer les événements nocturnes de la région de Genève.
+            Projet de portefolio réalisé avec TailwindCSS.
           </p>
           <br>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/Niwa-Yume/Noctinium'">
+              onclick="location.href='https://github.com/Niwa-Yume/Portefolio-tailwindcss'">
               Github
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://noctinium.com/'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://niwa-yume.github.io/Portefolio-tailwindcss/'">
               Live Demo
             </button>
           </div>
@@ -389,16 +389,15 @@
         <!-- BLOCK PROJET 2 PAR 2 -->
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="/assets/projet-2.png" alt="Projet WordPress 2" class="project-img" />
+            <img src="/images/BOT TELEGRAM.png" alt="Projet WordPress 2" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Bot telegram</h2>
           <p>
-            Script qui a pour but de récupérer des informations sur un site web, pour les stocker dans un excel traiter la donnée et la stocker dans une base de donnée.
-          </p>
+            Bot telegram lié à la ville de Genève qui a pour but de donner des informations sur la ville et ses transports.
           <br>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/Niwa-Yume/script_web_scrapping'">
+              onclick="location.href='https://github.com/Niwa-Yume/Geneva-bot'">
               Github
             </button>
             <button class="btn btn-color-2 project-btn" onclick="location.href=''">
@@ -409,20 +408,16 @@
         <!-- BLOCK PROJET 3 PAR 2 -->
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="/assets/image bot python.jpg" alt="Projet WordPress 3" class="project-img" />
+            <img src="/images/berger-belge.png" alt="Projet WordPress 3" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Club des bergers belges</h2>
           <p>
-            Bot qui a pour but de récupérer des informations sur plusieurs site web,les parcourirs et les stocker les données dans un excel traiter la donnée et la stocker dans une base de donnée.
+            Site web pour un club de bergers belges, site WordPress premier mandat pour le club.
           </p>
           <br>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/Niwa-Yume/Bot-scrapy'">
-              Github
-            </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://votresite.com/projet3'">
-              NO Live Demo
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://bergerbelgegeneve.ch/'">
+              Live Demo
             </button>
           </div>
         </div>
