--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
         <!-- BLOCK PROJET 2 PAR 2 -->
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="/images/BOT TELEGRAM.png" alt="Projet de bot telegram" class="project-img" />
+            <img src="./images/BOT TELEGRAM.png" alt="Projet de bot telegram" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Bot telegram</h2>
           <p>
