--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <!-- BLOCK PROJET 1 PAR 2 -->
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="/assets/projet-1.png" alt="Projet noctinium" class="project-img" />
+            <img src="./assets/projet-1.png" alt="Projet noctinium" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Noctinium</h2>
           <p>
@@ -295,7 +295,7 @@
         <!-- BLOCK PROJET 2 PAR 2 -->
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="/assets/projet-2.png" alt="Projet Scritp python" class="project-img" />
+            <img src="./assets/projet-2.png" alt="Projet Scritp python" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Script de scrapping</h2>
           <p>
@@ -315,7 +315,7 @@
         <!-- BLOCK PROJET 3 PAR 2 -->
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="/assets/image bot python.jpg" alt="Projet bot python crawler" class="project-img" />
+            <img src="./assets/image bot python.jpg" alt="Projet bot python crawler" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Bot de Crawling Scrapy</h2>
           <p>
@@ -335,7 +335,7 @@
         <!-- BLOCK PROJET 4 PAR 2 -->
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="/assets/meteo.png" alt="Projet App météo" class="project-img" />
+            <img src="./assets/meteo.png" alt="Projet App météo" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Application météo API</h2>
           <p>
@@ -369,7 +369,7 @@
         <!-- BLOCK PROJET 1 PAR 2 -->
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="/images/portefolio-tailwindcss.png" alt="Projet portefolio TailwindCSS" class="project-img" />
+            <img src="./images/portefolio-tailwindcss.png" alt="Projet portefolio TailwindCSS" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Portefolio TailwindCSS</h2>
           <p>
@@ -408,7 +408,7 @@
         <!-- BLOCK PROJET 3 PAR 2 -->
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="/images/berger-belge.png" alt="Projet WordPress" class="project-img" />
+            <img src="./images/berger-belge.png" alt="Projet WordPress" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Club des bergers belges</h2>
           <p>
