--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <h1 class="title">Julien Castro</h1>
       <p class="section__text__p2">Développeur</p>
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('./assets/CV fin mars 2024.pdf')">
+        <button class="btn btn-color-2" onclick="window.open('./assets/CV DESIGN mi avril 2024.pdf')">
           Télécharger CV
         </button>
         <button class="btn btn-color-1" onclick="location.href='./#contact'">
